--- a/index.html
+++ b/index.html
@@ -1,32 +1,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <title>Code Challenge</title>
-  <style>
-    img {
-      max-height: 200px;
-    }
-    textarea {
-      width: 100%;
-    }
-  </style>
+  <title>FlataBeer</title>
+  <link rel="stylesheet" type="text/css" href="styles/main.css" />
+  <script defer type="text/javascript" src="src/index.js"></script>
 </head>
-<body>
-  <div class='row'>
-
-    <div class='col-md-4'>
-      <ul class="list-group" id="list-group">
-      </ul>
-    </div>
-
-    <div class='col-md-8'>
-      <h2>Beer Detail</h2>
-      <div id="beer-detail">
-      </div>
-    </div>
-  </div>
-  <script src="src/index.js"></script>
-</body>
+  <body>
+  </body>
 </html>
