--- a/index.html
+++ b/index.html
@@ -2,9 +2,46 @@
 <head>
   <meta charset="UTF-8">
   <title>FlataBeer</title>
+  <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Open+Sans:400,600&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles/main.css" />
   <script defer type="text/javascript" src="src/index.js"></script>
 </head>
   <body>
+    <head>
+      <h1>FlataBeer</h1>
+      <nav>
+        <ul>
+          <li>Beer Name</li>
+          <li>Another Beer Name</li>
+          <li>And Another Beer Name</li>
+        </ul>
+      </nav>
+    </head>
+
+    <main>
+      <div class="beer-details">
+        <h2>Beer Name Goes Here</h2>
+        <img src="assets/image-placeholder.jpg">
+
+        <div class="description">
+          <textarea>
+            Beer description goes here
+          </textarea>
+          <button>Update Beer</button>
+        </div>
+
+        <form class="review-form">
+          <h3>Leave a Review</h3>
+          <textarea></textarea>
+          <input type="submit" value="Submit">
+        </form>
+
+        <ul class="reviews">
+          <h3>Customer Reviews</h3>
+          <li>Replace with actual review</li>
+          <li>From the server</li>
+        </ul>
+      </div>
+    </main>
   </body>
 </html>
