--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script defer type="text/javascript" src="src/index.js"></script>
 </head>
   <body>
-    <head>
+    <header>
       <h1>FlataBeer</h1>
       <nav>
         <ul>
@@ -16,7 +16,7 @@
           <li>And Another Beer Name</li>
         </ul>
       </nav>
-    </head>
+    </header>
 
     <main>
       <div class="beer-details">
@@ -24,9 +24,7 @@
         <img src="assets/image-placeholder.jpg">
 
         <div class="description">
-          <textarea>
-            Beer description goes here
-          </textarea>
+          <textarea>Beer description goes here</textarea>
           <button>Update Beer</button>
         </div>
 
@@ -38,7 +36,7 @@
 
         <ul class="reviews">
           <h3>Customer Reviews</h3>
-          <li>Replace with actual review</li>
+          <li>Replace with actual reviews</li>
           <li>From the server</li>
         </ul>
       </div>
