Update styles and HTML

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <h1>FlataBeer</h1>
       <nav>
         <ul>
+          <li>Don't worry about</li>
+          <li>This menu unless</li>
+          <li>You get to Advanced Deliverables</li>
           <li>Beer Name</li>
           <li>Another Beer Name</li>
           <li>And Another Beer Name</li>
