--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
         <h2>Beer Name Goes Here</h2>
         <img src="assets/image-placeholder.jpg">
 
-        <div class="description">
+        <form class="description">
           <textarea>Beer description goes here</textarea>
           <button>Update Beer</button>
-        </div>
+        </form>
 
+        <h3>Leave a Review</h3>
         <form class="review-form">
-          <h3>Leave a Review</h3>
           <textarea></textarea>
           <input type="submit" value="Submit">
         </form>
 
+        <h3>Customer Reviews</h3>
         <ul class="reviews">
-          <h3>Customer Reviews</h3>
           <li>Replace with actual reviews</li>
           <li>From the server</li>
         </ul>
