--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <title>FlataBeer</title>
   <link href="https://fonts.googleapis.com/css?family=Great+Vibes|Open+Sans:400,600&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="styles/main.css" />
+  <script src="src/Beer.js"></script>
+  <script src="src/ApiService.js"></script>
   <script defer type="text/javascript" src="src/index.js"></script>
 </head>
   <body>
@@ -24,11 +26,11 @@
     <main>
       <div class="beer-details">
         <h2>Beer Name Goes Here</h2>
-        <img src="assets/image-placeholder.jpg">
+        <img src="">
 
         <form class="description">
-          <textarea>Beer description goes here</textarea>
-          <button>Update Beer</button>
+         <textarea class="description-textarea"></textarea>
+          <button id="update-beer">Update Beer</button>
         </form>
 
         <h3>Leave a Review</h3>
@@ -39,8 +41,8 @@
 
         <h3>Customer Reviews</h3>
         <ul class="reviews">
-          <li>Replace with actual reviews</li>
-          <li>From the server</li>
+          <!-- <li>Replace with actual reviews</li>
+          <li>From the server</li> -->
         </ul>
       </div>
     </main>
